Polish a bit main section

--- a/templates/main.html
+++ b/templates/main.html
@@ -30,11 +30,11 @@
         <p>Пишаємось, що українське!</p>
         <p>Тут ви дізнаєтесь як розвивались ІТ-технології в Україні</p>
       </div>
+      <!-- Obligatory(by project aims) gif section -->
     <div class="gif-container">
       <img src="../img/sinopsis.gif" alt="">
     </div>
   </main>
-
   <footer>
     <div class="footer">
       <p>© Всі права захищено</p>
