--- a/static/information.css
+++ b/static/information.css
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10%;
+  padding-bottom: 10%;
   margin: 25px;
 }
 .box-logo > img {
