Adding about page

--- a/templates/history.html
+++ b/templates/history.html
@@ -11,27 +11,15 @@
   <nav class="sticky">
     <ul class="main-nav">
   	  <li class="push-left"><a href="main.html">Головна</a></li>
-  	  <li><a href="information.html">Інформація по темі</a></li>
+  	  <li><a href="information.html">Амбасадори</a></li>
   	  <li><a href="history.html">Історична довідка</a></li>
   	  <li><a href="facts.html">Цікаві факти</a></li>
   	  <li><a href="about.html">Про нас</a></li>
   	</ul>
   </nav>
-    <body>
-        <h2>1957</h2>
-        <p>Розроблено принципи побудови, структура й архiтектура i створена перша в Українi асинхронна ЕОМ "Киев" з використанням "адресної мови". Б.В.Гнєденко, В.М.Глушков, В.С.Королюк, К.Л.Ющенко, Л.Н.Дашевський, К.О.Шкабара, С.Б.Погребинський. АН УРСР (1954-1957).</p>
-        <h2>1964</h2>
-        <p>Розроблено принципи побудови, структура та архiтектура, сконструйованi i випущенi першi в СРСР машини для iнженерних розрахункiв "Промiнь" (1964), "МИР1" (1965), "МИР2" (1969), "МИР3" (1972) - провiсникiв майбутнiх персональних ЕОМ. Здiйснено їхнє масове серiйне виробництво. В.М.Глушков, С.Б.Погребинський, А.О.Летичевський, Ю.В.Благовiщенський та iншi. Державна премiя СРСР (1968). АН УРСР, НВО "Електронмаш"</p>
-        <h2>1968</h2>
-        <p>Розроблені (в НВО "Імпульс") і розпочато випуск великими серіями цифрових засобів промислової системотехніки: сімейства моделей М6000 - М7000 АСВТ-М, яке стало свого часу основою побудови систем керування процесами практично у всіх сферах народного господарства і ряду оборонних галузей СРСР. За десять років серійного виробництва Київський завод обчислювальних керуючих машин, Сіверодонецький приладобудівний і Тбіліський завод керуючих обчислювальних машин випустили більше 18 тисяч комплексів М6000, на їх базі створено понад 15 тисяч систем управління. А.О.Новохатній, В.В.Рєзанов та ін. Сіверодонецьке НВО "Імпульс". Державна премія РМ УРСР (1979). Розроблені і випускалися промисловістю: сімейство клавішних ЕОМ "Іскра". Премія імені М.Островського (1968). Г.I.Корнiєнко, Б.Г.Мудла, С.С.Забара. АН УРСР. Завод "Счетмаш", Курськ.</p>
-        <h2>1971</h2>
-        <p>Розроблено та органiзовано випуск 12 типiв бортових ЕОМ (у тому числi радiацiйно стiйких) для ракетно-космiчних комплексiв стратегiчного призначення. (1967-1989). А.I.Кривоносов, Б.О.Василенко та iншi. Ленiнська премiя, Державна премiя СРСР, Державна премiя УРСР. Харкiвське НВО "Хартрон", Київський радiозавод.</p>
-        <h2>1972</h2>
-        <p>Розроблено та розпочато серiйний випуск спецiалiзованих супернадiйних ЕОМ "Карат" (чотири модифiкацiї) для систем озброєння i керування на надводних та пiдводних, у тому числi атомних суднах Вiйськово-Морського флоту СРСР, а також для розв'язання задач навiгацiї на суднах торгового флоту та атомних криголамiв (понад 60 типiв систем) (1969-1989). В.Н.Плотнiков, В.I.Долгов, Г.Є.Гай та iн. Київський НДI радiоелектронiки, Київський завод "Буревiсник" Створено i випущено малою серiєю контрольно-вимiрювальний комплекс "Барс". Золота медаль виставки в Дрезденi. В.I.Скурiхiн, А.О.Морозов. АН УРСР. Перший випущений малою серiєю в Українi мiнi-комп'ютер "УПО-1" (пристрiй первинної обробки даних у вимiрювальних системах). Б.М.Малиновський, В.С.Каленчук, П.М.Сиваченко. АН УРСР, Житомирський завод "Измеритель". Пiдготовлено та опублiковано першу в свiтi "Енциклопедiю кiбернетики" українською та росiйською мовами. В.М.Глушков, А.I.Кухтенко, Б.М.Малиновський та iншi. АН УРСР. Державна премія УРСР. Починаючи з 1970-го року було створено і використовувався ряд бортових ЕОМ "Мрiя", "Чайка", "Москва", "Нептун". Г.С.Голодняк, В.Н.Петрунек</p>
+  <body>
 
-        <p>Більше інформації ви можете знайти <a class="link" href="https://uk.m.wikipedia.org/wiki/%D0%A5%D1%80%D0%BE%D0%BD%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%8F_%D1%80%D0%BE%D0%B7%D0%B2%D0%B8%D1%82%D0%BA%D1%83_%D0%BE%D0%B1%D1%87%D0%B8%D1%81%D0%BB%D1%8E%D0%B2%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D1%97_%D1%82%D0%B5%D1%85%D0%BD%D1%96%D0%BA%D0%B8_%D0%B2_%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%96">тут</a></p>
-
-    </body>
+  </body>
   <footer>
     <div class="footer">
       <p>© Всі права захищено</p>
