--- a/templates/about.html
+++ b/templates/about.html
@@ -11,29 +11,21 @@
   <nav class="sticky">
     <ul class="main-nav">
   	  <li class="push-left"><a href="main.html">Головна</a></li>
-  	  <li><a href="information.html">Інформація по темі</a></li>
+  	  <li><a href="information.html">Амбасадори</a></li>
   	  <li><a href="history.html">Історична довідка</a></li>
   	  <li><a href="facts.html">Цікаві факти</a></li>
   	  <li><a href="about.html">Про нас</a></li>
   	</ul>
   </nav>
   <body>
-	<section>
-		<img class="avatar"  src="../img/avatar.jpg" >
-
-				<h2>Юрій Остапович</h2>
-
-				<p>Дата народження: 04.06.2004</p>
-				<p>Місце народження: Івано-Франківськ, Україна</p>
-				<p>Освіта: СШ №5</p>
-                <p>Навчаюся в спеціалізованій школі з поглибленим вивченням німецької мови №5. З хоббі займаюся спортивно-бальними танцями, акторською майстерністю і волейболом. В майбутньому хочу зв'язати свої знання з іноземних мов із своїм хоббі і стати тренером з танців закордоном. Хореографією займаюся 9 років,  акторською майстерністю 3 роки, волейболом 2 роки.</p>
-	</section>
-  </body>
-  <footer>
-    <div class="footer">
-      <p>© Всі права захищено</p>
-      <p>Юра Остапович</p>
-
+    <div class="grid-wrapper">
+      <div class="box-text">
+        <h2>Юрій Остапович</h2>
+      </div>
+      <div class="box-gif">
+        <img class="avatar"  src="../img/github.gif" >
+      </div>
     </div>
-  </footer>
+	</body>
+
 </html>
