--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
   <nav class="sticky">
     <ul class="main-nav">
   	  <li class="push-left"><a href="main.html">Головна</a></li>
-  	  <li><a href="information.html">Інформація по темі</a></li>
+  	  <li><a href="information.html">Амбасадори</a></li>
   	  <li><a href="history.html">Історична довідка</a></li>
   	  <li><a href="facts.html">Цікаві факти</a></li>
   	  <li><a href="about.html">Про нас</a></li>
