Polish info page

--- a/templates/information.html
+++ b/templates/information.html
@@ -22,8 +22,8 @@
 	<div class="grid-wrapper">
     <div class="box-text">
       <h3>EPAM systems</h3>
-      <p>Since 1993, EPAM Systems, Inc. (NYSE: EPAM) has leveraged its software engineering expertise to become a leading global product development, digital platform engineering, and top digital and product design agency. </p>
-      <p>EPAM was one of only four technology companies to appear on Forbes 25 Fastest Growing Public Tech Companies list every year of publication since 2013 and was the only IT services company featured on Fortune’s 100 Fastest-Growing Companies list of 2019</p>
+      <p>EPAM Systems було засновано у 1993 році і з тих пір компанія розвинула свої послуги з інжинірингової експертизи настільки, що посіла місце світового лідера у сфері створення програмного забезпечення та надання послуг з розробки цифрових платформ.</p>
+      <p>ЕРАМ надає замовникам найсучасніші інноваційні рішення, використовуючи досвід у стратегічному плануванні, консалтингу та розробці. Спеціалісти ЕРАМ надають послуги клієнтам компанії у більш ніж 25 країнах Північної Америки, Європи, Азії та Австралії. </p>
       <div class="buttons">
         <h4><a class="button pink" href="https://careers.epam.ua/">Website</a></h4>
         <h4><a class="button gray" href="https://goo.gl/maps/RZP55WykqrnqK1Kn6">Location</a></h4>
@@ -40,8 +40,8 @@
     </div>
     <div class="box-text pink-border">
       <h3>Softserve</h3>
-      <p>SoftServe is a digital authority that advises and provides at the cutting-edge of technology. We reveal, transform, accelerate, and optimize the way enterprises and software companies do business. With expertise across healthcare, retail, energy, financial services, and more, we implement end-to-end solutions to deliver the innovation, quality, and speed that our clients’ users expect. </p>
-      <p>SoftServe delivers open innovation, from generating compelling new ideas, to developing and implementing transformational products and services.</p>
+      <p>SoftServe має значний досвід у розробці програмного забезпечення — від Cloud, Security і UX Design до Big Analytics та Internet of Things. Головними сферами, для яких компанія розробляє програмні рішення, є охорона здоров'я, роздрібна торгівля, фінансові послуги та програмне забезпечення. </p>
+      <p>У 2012 році SoftServe став ініціатором проведення щорічного конкурсу «Ukrainian IT Award», що визначає найкращих фахівців української ІТ-індустрії. Компанія залишається партнером конкурсу і по сьогоднішній день.</p>
       <div class="buttons">
         <h4><a class="button blue" href="https://www.softserveinc.com/en-us">Website</a></h4>
         <h4><a class="button gray" href="https://goo.gl/maps/XonHcTCRNPihkRVL7">Location</a></h4>
@@ -52,8 +52,8 @@
   <div class="grid-wrapper">
     <div class="box-text blue-border">
       <h3>GlobalLogic</h3>
-      <p>GlobalLogic is a full-lifecycle product development services leader that combines chip-to-cloud software engineering expertise and vertical industry experience to help our customers design, build, and deliver their next generation products and digital experiences.  </p>
-      <p>Headquartered in Silicon Valley, GlobalLogic operates design studios and engineering centers around the world, extending the benefits of our true global presence to customers in the telecom, automotive, healthcare, technology, media and entertainment, manufacturing, and semiconductor industries.</p>
+      <p>GlobalLogic Україна входить до GlobalLogic Inc., яка налічує понад 16000 працівників у Аргентині, Великій Британії, Ізраїлі, Індії, Китаї, Польщі, Словаччині, США, Україні, Хорватії, Чилі та Швеції.  </p>
+      <p>Головний офіс GlobalLogic знаходиться у Сан-Хосе (Каліфорнія, США). Компанія займається розробкою програмних продуктів у таких сферах як цифрові медіа та телекомунікації, автомобільні технології, охорона здоров'я, фінанси, роздрібна торгівля та електронна комерція.</p>
       <div class="buttons">
         <h4><a class="button purple" href="https://www.globallogic.com/ua">Website</a></h4>
         <h4><a class="button gray" href="https://goo.gl/maps/g9AteyHJKVG1AbuR7">Location</a></h4>
