--- a/static/facts.css
+++ b/static/facts.css
@@ -1,17 +1,19 @@
 .grid-wrapper {
   display: inline-grid;
-  grid-gap: 100px;
+  grid-gap: 90px;
   grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr);
   font-size: 0.9rem;
 }
 .box{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-bottom: 10%;
-  margin-top: 20px;
+  margin-bottom: 6%;
+  margin-top: 15px;
 }
 .box-header{
   margin-left: 10%;
   border-bottom: 2.5px solid purple;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 h2{
   text: solid;
@@ -20,7 +22,22 @@ h2{
 }
 .box-content{
   padding: 2% 10%;
+  text-align: justify;
 }
 .box-content > img {
   width: 100%;
+}
+.box-content > audio {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  padding-top: 10px;
+  width: 80%;
+  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+}
+.box-content > iframe {
+  width: 100%;
+  height: 220px;
 }
