Adding history page, rough version

--- a/templates/history.html
+++ b/templates/history.html
@@ -18,7 +18,49 @@
   	</ul>
   </nav>
   <body>
+    <div class="flex-wrapper">
+      <div class="container">
+        <p>Навряд чи всі колись дійдуть до спільної думки про найважливіші дати в історії ІТ. Кожна думка є абсолютною та унікальною, в тому числі й моя.</p>
+        <p>Проте я намагався бути об'єктивним у дослідженні подій, які послужили формуванню сучасного ландшафту сучасної інформаційної сфери. Деякі етапи мого списку є дискусійними (залежно від вашої сфери діяльності), але деякі з них, швидше за все, ні.
+        <p>
+        <p>Тут зібрані декілька визначиних подій в світі, які мали значний вплив на сферу у світі і зокрема в Україні.</p>
+      </div>
+    </div>
+    <div class="grid-wrapper">
 
+      <!-- 1 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 2 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 3 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 4 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 5 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 6 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 7 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 8 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 9 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+      <!-- 10 --><div class="box">
+                  <h1>1900</h1>
+                </div>
+
+          </div>
+    </div>
   </body>
   <footer>
     <div class="footer">
