Changing history page to better one

--- a/templates/history.html
+++ b/templates/history.html
@@ -19,7 +19,11 @@
   </nav>
   <body>
     <div class="flex-wrapper">
-      <div class="container">
+      <div class="container-1">
+        <h3>Історія</h3>
+        <h1>IT</h1>
+      </div>
+      <div class="container-2">
         <p>Навряд чи всі колись дійдуть до спільної думки про найважливіші дати в історії ІТ. Кожна думка є абсолютною та унікальною, в тому числі й моя.</p>
         <p>Проте я намагався бути об'єктивним у дослідженні подій, які послужили формуванню сучасного ландшафту сучасної інформаційної сфери. Деякі етапи мого списку є дискусійними (залежно від вашої сфери діяльності), але деякі з них, швидше за все, ні.
         <p>
@@ -27,36 +31,38 @@
       </div>
     </div>
     <div class="grid-wrapper">
-
-      <!-- 1 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 1 --><div class="box" data-hover ="Рік народження мови програмування COBOL.
+                Її вплив на інші мови важко переоцінити і навіть зараз програми на ній продовжують працювати">
+                  <h1>1959</h1>
                 </div>
-      <!-- 2 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 2 --><div class="box" data-hover ="Винахід ARPANET'а, попередника сучасного інтернету.
+                Цікаво, що ідея належала Дж. Ліклідеру, митцю, з його серії записок 'Міжгалактична мережа'">
+                  <h1>1969</h1>
                 </div>
-      <!-- 3 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 3 --><div class="box" data-hover ="Винахід першої операційної системи, яка дозволила одночасно логінити більше одного користувача. UNIX ">
+                  <h1>1970</h1>
                 </div>
-      <!-- 4 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 4 --><div class="box" data-hover ="Вільям Могрідж, який на той час працював в Grid co., розробляє дизайн комп.ютера - Laptop ">
+                  <h1>1979</h1>
                 </div>
-      <!-- 5 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 5 --><div class="box" data-hover ="Народження першої open-source операційної системи. Linus Torvalds привніс багато в цю сферу, підбадьорив монополістів і сильно допоміг студентам">
+                  <h1>1991</h1>
                 </div>
-      <!-- 6 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 6 --><div class="box" data-hover ="Новий погляд на стандртну уже фразу 'робочий стіл', дизайн і панелі інструментів. Windows 95">
+                  <h1>1995</h1>
                 </div>
-      <!-- 7 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 7 --><div class="box" data-hover ="Dot.com. Завдяки йому, такі компанії, як Amazon та Google не лише укріпились на ринку, але й стали китами в своїй сфері.">
+                  <h1>1990s</h1>
                 </div>
-      <!-- 8 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 8 --><div class="box" data-hover ="Дійсно, все, що мені тут потрібно сказати, - це одне слово: iPod. Якби Джобс не повернувся до Apple, iPod, швидше за все, ніколи б не втілився в життя.
+                Якби iPod не був реалізований, Apple загинула б. Без Apple OS X ніколи б не побачила світла дня. І без OS X пейзаж операційної системи був би обмежений для Windows та Linux.">
+                  <h1>1996</h1>
                 </div>
-      <!-- 9 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 9 --><div class="box" data-hover ="Поява Napser, завдяки якому ми маэмо сучасне представлення про файлообмін та протоколи P2P. Чого лише вартий термін - торент.">
+                  <h1>1999</h1>
                 </div>
-      <!-- 10 --><div class="box">
-                  <h1>1900</h1>
+      <!-- 10 --><div class="box" data-hover ="Старт вікіпедії. Це єдиний найбільший ресурс для спільної роботи, доступний громадськості. З тих пір Вікіпедія стала одним з найпоширеніших джерел на планеті. ">
+                  <h1>2000</h1>
                 </div>
 
           </div>
