--- a/static/history.css
+++ b/static/history.css
@@ -1,16 +1,30 @@
 .flex-wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
-  box-shadow: 0px 3px 3px rgb(211, 84, 211);
+  justify-content: space-around;
   margin-bottom: 6%;
+  background-image: url(../img/history.jpg);
+  background-repeat: no-repeat;
 }
-.container {
-  text-align: center;
+.container-1 {
+  padding: 0;
+  margin: 10%;
+}
+.container-2 {
   margin: 5%;
   width: 45%;
 }
-
+.container-1 > h1{
+  text-align: center;
+  font-size: 55px;
+  padding: 0;
+  margin: 0;
+  color: #536DFE;
+}
+.container-1 > h3 {
+  padding: 0;
+  margin: 0;
+}
 .grid-wrapper {
   display: grid;
   grid-gap: 50px;
@@ -22,4 +36,15 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 10%;
   padding: 50px;
+}
+
+.box:hover {
+  font-size: 0;
+  transition: all 0.5s;
+}
+
+.box:hover:after{
+  content: attr(data-hover);
+  font-size: 1.2rem;
+  weight: 200px;
 }
