--- a/static/general.css
+++ b/static/general.css
@@ -14,7 +14,7 @@ body{
   padding: 10px;
   margin-top: 5px;
   list-style: none;
-  font-size: 17px;
+  font-size: 1.1rem;
   background-color: white;
   border-bottom: 1.5px solid blue;
 
