--- a/templates/history.html
+++ b/templates/history.html
@@ -19,11 +19,8 @@
   </nav>
   <body>
     <div class="flex-wrapper">
-      <div class="container-1">
-        <h3>Історія</h3>
-        <h1>IT</h1>
-      </div>
-      <div class="container-2">
+      <div class="container">
+        <h1>ІСТОРІЯ IT</h1>
         <p>Навряд чи всі колись дійдуть до спільної думки про найважливіші дати в історії ІТ. Кожна думка є абсолютною та унікальною, в тому числі й моя.</p>
         <p>Проте я намагався бути об'єктивним у дослідженні подій, які послужили формуванню сучасного ландшафту сучасної інформаційної сфери. Деякі етапи мого списку є дискусійними (залежно від вашої сфери діяльності), але деякі з них, швидше за все, ні.
         <p>
