--- a/static/facts.css
+++ b/static/facts.css
@@ -4,6 +4,7 @@
   grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr);
   font-size: 0.9rem;
 }
+
 .box{
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 6%;
@@ -40,4 +41,16 @@ h2{
 .box-content > iframe {
   width: 100%;
   height: 220px;
+}
+
+@media screen and (max-width: 1100px) {
+  .grid-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-gap: 1rem;
+  }
+  .box-header{
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
