--- a/static/general.css
+++ b/static/general.css
@@ -35,6 +35,11 @@ a{
   color: #333333;
   text-decoration: none;
 }
+@media screen and (max-width: 1000px) {
+  .main-nav {
+    font-size: 20px;
+  }
+}
 /* makes navigation bar sticky */
 .sticky{
   position: sticky;
