--- a/static/history.css
+++ b/static/history.css
@@ -34,6 +34,7 @@ p {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 10%;
   padding: 50px;
+  transition: all 0.1s;
 }
 
 .box:hover {
